# bot

./: Cargo.toml
example/: plugin.toml
example/src/: main.luau
src/: lib.rs  main.rs
src/bot/: mod.rs
src/lua/: events.luau  main.luau  mod.rs  plugins.rs
